# timeout

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-application.yml  python-package.yml
tests/: test_timeout_decorator.py  test_timeout_manager.py
timeout/: __init__.py
